Created seperate html and css pages for login and signup and home page

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,17 +7,11 @@
     <title>Pilot's Pal</title>
     <link rel="stylesheet" href="/static/style.css">
 </head>
+
 <body>
     <h1>Pilot's Pal</h1>
-    <h5>Create an acoount and have your flights saved for easier wether reports!</h5>
-    <form>
-        <label for="username">Username</label>
-        <input type="text" name="username"> <br>
-        <label for="password">Passowrd</label>
-        <input type="password" name="password"> <br>
-        <input type="submit">
-    </form>
-    <h5>If you have already signed up then login here</h5>
-    <input type="submit">
+    <h3>A more convient way to look up weather data if you forget your NAIPS details</h3>
+    <p class="quote">"Once you have tasted flight, you will forever walk the earth with your eyes turned skyward, for there you have been, and there you will always long to return"</p>
+    <p class="person">- Leonardo Da Vinci</p>
 </body>
 </html>
