--- a/templates/signup.html
+++ b/templates/signup.html
@@ -4,17 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/style2.css">
-    <title>Login page</title>
+    <link rel="stylesheet" href="/static/style1.css">
+    <title>sign up</title>
 </head>
 <body>
-    <h2>Welcome back!</h2>
-    <form>
-        <label for="username">Username</label><br>
+    <h2>Welcome!</h2>
+    <label for="username">Create a username</label> <br>
         <input type="text" name="username"> <br>
-        <label for="password">Passowrd</label> <br>
+        <label for="password">Create a passowrd</label> <br>
         <input type="password" name="password"> <br>
         <input type="submit">
-    </form>
 </body>
 </html>
