--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,4 @@
+/* This is the css file for the home page */
 h1, h3 {
     text-align: center;
     font-family: Georgia, Times, 'Times New Roman', serif;
