--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,7 @@
     <title>Login page</title>
 </head>
 <body>
-    <h2>Welcome back!</h2>
+    <h2>Welcome back! Login to continue using our service</h2>
     <form>
         <label for="username">Username</label><br>
         <input type="text" name="username"> <br>
