--- a/templates/signup.html
+++ b/templates/signup.html
@@ -8,7 +8,7 @@
     <title>sign up</title>
 </head>
 <body>
-    <h2>Welcome!</h2>
+    <h2>Welcome! Sign up to start using our service</h2>
     <label for="username">Create a username</label> <br>
         <input type="text" name="username"> <br>
         <label for="password">Create a passowrd</label> <br>
