--- a/templates/base.html
+++ b/templates/base.html
@@ -13,5 +13,7 @@
     <h3>A more convient way to look up weather data if you forget your NAIPS details</h3>
     <p class="quote">"Once you have tasted flight, you will forever walk the earth with your eyes turned skyward, for there you have been, and there you will always long to return"</p>
     <p class="person">- Leonardo Da Vinci</p>
+    <a href="/signup">Sign up</a>
+    <a href="/login">Login</a>
 </body>
 </html>
