--- a/templates/user_main.html
+++ b/templates/user_main.html
@@ -9,8 +9,11 @@
 </head>
 <body>
     <h2>Hello there</h2>
-    <p>Enter a location for its weather information</p>
-    <input type="text" name="location"> <br>
-    <input type="submit">
+    <p>Enter a location's latitude and longitude for its weather information</p>
+    <form method="post" action="/weather_get">
+        <input type="text" name="lat"> <br>
+        <input type="text" name="lon">
+        <input type="submit">
+    </form>
 </body>
 </html>
