I think this is basically all of the code

--- a/static/style3.css
+++ b/static/style3.css
@@ -1,3 +1,12 @@
 html {
     background-color: seashell;
 }
+
+#input {
+    text-align: center;
+}
+
+#current {
+    text-align: center;
+    border-radius: 20px;
+}
