--- a/templates/login.html
+++ b/templates/login.html
@@ -9,12 +9,10 @@
 </head>
 <body>
     <h2>Welcome back! Login to continue using our service</h2>
-    <form>
-        <label for="username">Username</label><br>
-        <input type="text" name="username"> <br>
-        <label for="password">Passowrd</label> <br>
-        <input type="password" name="password"> <br>
-        <input type="submit">
+    <form action="/login" method="POST">
+        Username: <input type="text" name="username"> <br>
+        Passowrd: <input type="password" name="password"> <br>
+        <input type="submit" value="Login">
     </form>
 </body>
 </html>
