final copy of the code

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -9,10 +9,12 @@
 </head>
 <body>
     <h2>Welcome! Sign up to start using our service</h2>
+    <form action="/signup" method="POST">
     <label for="username">Create a username</label> <br>
         <input type="text" name="username"> <br>
         <label for="password">Create a passowrd</label> <br>
         <input type="password" name="password"> <br>
         <input type="submit">
+    </form>
 </body>
 </html>
