--- a/templates/base.html
+++ b/templates/base.html
@@ -10,9 +10,11 @@
 
 <body>
     <h1>Pilot's Pal</h1>
-    <h3>A more convient way to look up weather data if you forget your NAIPS details</h3>
-    <p class="quote">"Once you have tasted flight, you will forever walk the earth with your eyes turned skyward, for there you have been, and there you will always long to return"</p>
-    <p class="person">- Leonardo Da Vinci</p>
+    <h5>A more convient way to look up weather data if you forget your NAIPS details</h5>
+    <p id="quote">"Once you have tasted flight, you will forever walk the earth with your eyes turned skyward, for there you have been, and there you will always long to return"</p>
+    <p id="person">- Leonardo Da Vinci</p>
+    </div>
+    <img src="plane .jpeg" alt="image of a plane flying"> <br>
     <a href="/signup">Sign up</a>
     <a href="/login">Login</a>
 </body>
