got both the login and signup pages working now
\q

--- a/templates/user_main.html
+++ b/templates/user_main.html
@@ -27,6 +27,7 @@
         <p>Current wind_speed: {{speed}}</p>
         <p>Current wind_gust: {{gust}}</p>
         <p>Current wind_heading: {{heading}}</p>
+        <p>Hourly humidity: {{test_heading}}</p>
     </div>
 
 
