--- a/templates/user_main.html
+++ b/templates/user_main.html
@@ -8,6 +8,7 @@
     <title>main</title>
 </head>
 <body>
+    <div id="container"></div>
     <div id="input">
         <h2>Hello there</h2>
         <p>Enter a location's latitude and longitude for its weather information</p>
@@ -37,6 +38,8 @@
         <p>Current wind_speed: {{speed}}</p>
         <p>Current wind_gust: {{gust}}</p>
         <p>Current wind_heading: {{heading}}</p>
+    </div>
+
     </div>
 
 
